[package]
name = "ha_mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_inner_serialize = "0.1"


[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
